--- a/app/src/main/res/layout/fragment_movies.xml
+++ b/app/src/main/res/layout/fragment_movies.xml
@@ -1,12 +1,7 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+<GridView
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.nick.popularmovies.MoviesFragment">
-
-
-    <GridView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/movieGridView"
-        android:layout_gravity="left|center_vertical" />
-</FrameLayout>
+    android:numColumns="2"
+    android:id="@+id/movieGridView"
+    android:layout_gravity="left|center_vertical"
+    xmlns:android="http://schemas.android.com/apk/res/android" />
