--- a/app/src/main/res/layout/fragment_movies.xml
+++ b/app/src/main/res/layout/fragment_movies.xml
@@ -1,7 +1,7 @@
 <GridView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:numColumns="2"
+    android:isScrollContainer="true"
     android:id="@+id/movieGridView"
-    android:layout_gravity="left|center_vertical"
     xmlns:android="http://schemas.android.com/apk/res/android" />
