--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -1,54 +1,77 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.nick.popularmovies.MovieDetailFragment"
     android:id="@+id/detail">
 
+    <ImageView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:id="@+id/movie_image"
+        android:tint="#89000000" />
     <TextView
+        android:layout_marginTop="@dimen/movie_detail_vertical_margin"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Movie Title"
-        android:id="@+id/textView"
+        android:textColor="@android:color/white"
+        android:id="@+id/movie_title"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Synopsis: This is where the movie description will go.  There will probably be two or three sentences about it."
-        android:id="@+id/textView2"
-        android:layout_marginTop="43dp"
-        android:layout_below="@+id/textView4"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <RatingBar
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/ratingBar"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Vote Average: 3.8 / 5"
-        android:id="@+id/textView3"
-        android:layout_below="@+id/ratingBar"
-        android:layout_centerHorizontal="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
+        android:textColor="@android:color/white"
+        android:layout_marginTop="@dimen/movie_detail_vertical_margin"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Release Date: Tuesday, January 5th, 1974"
-        android:id="@+id/textView4"
-        android:layout_below="@+id/textView"
+        android:id="@+id/release_date"
+        android:layout_below="@+id/movie_title"
+         />
+
+    <TextView
+        android:layout_marginTop="@dimen/movie_detail_vertical_margin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
+        android:textColor="@android:color/white"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Synopsis: This is where the movie description will go.  There will probably be two or three sentences about it."
+        android:id="@+id/synopsis"
+        android:layout_below="@+id/release_date"
+        />
+
+    <RatingBar
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
+        android:layout_marginTop="@dimen/movie_detail_vertical_margin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/rating_bar"
+        android:isIndicator="true"
+        android:layout_below="@+id/synopsis"
+        android:progressTint="@android:color/white"
+        android:rating="2.5"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:progressBackgroundTint="#ff828282" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="3.8 out of 5"
+        android:id="@+id/rating_data"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
+        android:textColor="@android:color/white"
+        android:layout_below="@+id/rating_bar"
         android:layout_centerHorizontal="true" />
 </RelativeLayout>
