--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
-    <PreferenceCategory android:title="Popular Movie Settings">
+    <PreferenceCategory android:title="@string/settings_title">
         <ListPreference android:key="sort_order"
             android:defaultValue="@string/sort_order_default"
             android:title="@string/sort_order_title"
