--- a/app/src/main/res/layout/fragment_movies.xml
+++ b/app/src/main/res/layout/fragment_movies.xml
@@ -1,6 +1,8 @@
 <GridView
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:numColumns="2"
+    android:numColumns="auto_fit"
+    android:stretchMode="columnWidth"
+    android:columnWidth="130dp"
     android:id="@+id/movieGridView"
     xmlns:android="http://schemas.android.com/apk/res/android" />
