--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="sort_order_options">
-        <item>Latest</item>
-        <item>Popularity</item>
+        <item>Most Popular</item>
+        <item>Top Rated</item>
     </string-array>
     <string-array name="sort_order_option_values">
-        <item>release_date.desc</item>
         <item>popularity.desc</item>
+        <item>vote_average.desc</item>
     </string-array>
 </resources>
