--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -5,7 +5,8 @@
             android:defaultValue="@string/sort_order_default"
             android:title="@string/sort_order_title"
             android:entries="@array/sort_order_options"
-            android:entryValues="@array/sort_order_option_values">
+            android:entryValues="@array/sort_order_option_values"
+            >
 
 
         </ListPreference>
