--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -12,7 +12,8 @@
         android:tint="#89000000" />
     <ScrollView
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:id="@+id/scrollView">
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -82,6 +83,15 @@
                 android:textColor="@android:color/white"
                 android:layout_below="@+id/rating_bar"
                 android:layout_centerHorizontal="true" />
+            <ToggleButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Favorite"
+                android:id="@+id/toggleFavorite"
+                android:layout_below="@+id/rating_data"
+                android:layout_centerHorizontal="true" />
         </RelativeLayout>
     </ScrollView>
+
+
 </RelativeLayout>
