--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -82,6 +82,12 @@
                 android:textColor="@android:color/white"
                 android:layout_below="@+id/rating_bar"
                 android:layout_centerHorizontal="true" />
+            <ImageButton android:id="@+id/favorite"
+                android:layout_width="wrap_content"
+                android:layout_height="fill_parent"
+                android:src="@drawable/btn_star_holo_dark"
+                android:background="#00ffffff"
+                android:onClick="onToggleStar"/>
         </RelativeLayout>
     </ScrollView>
 </RelativeLayout>
