--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -88,6 +88,23 @@
                 android:src="@drawable/btn_star_holo_dark"
                 android:background="#00ffffff"
                 android:onClick="onToggleStar"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/reviews"
+                android:text="@string/reviews"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/trailers"
+                android:text="@string/trailers"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/related"
+                android:text="@string/related"/>
+
+
         </RelativeLayout>
     </ScrollView>
 </RelativeLayout>
