App is working again, not database currently. Need to update details view, save favorites, and be able to load favorites.

--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -1,12 +1,13 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/detail"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.nick.popularmovies.MovieDetailFragment"
-    android:id="@+id/detail">
+    tools:context="com.example.nick.popularmovies.MovieDetailFragment">
     <ImageView
+        android:id="@+id/movie_image"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/movie_image"
         android:adjustViewBounds="true"
         android:scaleType="centerCrop"
         android:tint="#89000000" />
@@ -17,93 +18,93 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <TextView
-                android:layout_marginTop="@dimen/movie_detail_vertical_margin"
-                android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                android:layout_marginRight="@dimen/activity_horizontal_margin"
+                android:id="@+id/movie_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="Movie Title"
-                android:textColor="@android:color/white"
-                android:id="@+id/movie_title"
                 android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true" />
+                android:layout_centerHorizontal="true"
+                android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                android:layout_marginRight="@dimen/activity_horizontal_margin"
+                android:layout_marginTop="@dimen/movie_detail_vertical_margin"
+                android:text="Movie Title"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="@android:color/white" />
 
             <TextView
+                android:id="@+id/release_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_below="@+id/movie_title"
                 android:layout_marginLeft="@dimen/activity_horizontal_margin"
                 android:layout_marginRight="@dimen/activity_horizontal_margin"
-                android:textColor="@android:color/white"
                 android:layout_marginTop="@dimen/movie_detail_vertical_margin"
-                android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="Release Date: Tuesday, January 5th, 1974"
-                android:id="@+id/release_date"
-                android:layout_below="@+id/movie_title"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="@android:color/white"
                  />
 
             <TextView
-                android:layout_marginTop="@dimen/movie_detail_vertical_margin"
+                android:id="@+id/synopsis"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_below="@+id/release_date"
                 android:layout_marginLeft="@dimen/activity_horizontal_margin"
                 android:layout_marginRight="@dimen/activity_horizontal_margin"
-                android:textColor="@android:color/white"
-                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:layout_marginTop="@dimen/movie_detail_vertical_margin"
                 android:text="Synopsis: This is where the movie description will go.  There will probably be two or three sentences about it."
-                android:id="@+id/synopsis"
-                android:layout_below="@+id/release_date"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="@android:color/white"
                 />
 
             <RatingBar
+                android:id="@+id/rating_bar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/synopsis"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
                 android:layout_marginLeft="@dimen/activity_horizontal_margin"
                 android:layout_marginRight="@dimen/activity_horizontal_margin"
                 android:layout_marginTop="@dimen/movie_detail_vertical_margin"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/rating_bar"
                 android:isIndicator="true"
-                android:layout_below="@+id/synopsis"
+                android:progressBackgroundTint="#ff828282"
                 android:progressTint="@android:color/white"
                 android:rating="2.5"
-                android:layout_centerVertical="true"
-                android:layout_centerHorizontal="true"
-                android:progressBackgroundTint="#ff828282"
                 android:secondaryProgressTint="#ff828282"/>
 
             <TextView
+                android:id="@+id/rating_data"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="3.8 out of 5"
-                android:id="@+id/rating_data"
+                android:layout_below="@+id/rating_bar"
+                android:layout_centerHorizontal="true"
                 android:layout_marginLeft="@dimen/activity_horizontal_margin"
                 android:layout_marginRight="@dimen/activity_horizontal_margin"
-                android:textColor="@android:color/white"
-                android:layout_below="@+id/rating_bar"
-                android:layout_centerHorizontal="true" />
+                android:text="3.8 out of 5"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="@android:color/white" />
             <ImageButton android:id="@+id/favorite"
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
-                android:src="@drawable/btn_star_holo_dark"
                 android:background="#00ffffff"
-                android:onClick="onToggleStar"/>
+                android:onClick="onToggleStar"
+                android:src="@drawable/btn_star_holo_dark" />
             <TextView
+                android:id="@+id/reviews"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/reviews"
                 android:text="@string/reviews"/>
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:id="@+id/trailers"
-                android:text="@string/trailers"/>
-            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/related"
-                android:text="@string/related"/>
+                android:text="@string/trailers"/>
 
+            <TextView
+                android:id="@+id/related"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/related"/>
 
         </RelativeLayout>
     </ScrollView>
