--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -86,25 +86,32 @@
             <ImageButton android:id="@+id/favorite"
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
+                android:layout_toRightOf="@id/movie_title"
                 android:background="#00ffffff"
-                android:onClick="onToggleStar"
+                android:layout_marginTop="@dimen/movie_detail_vertical_margin"
                 android:src="@drawable/btn_star_holo_dark" />
             <TextView
                 android:id="@+id/reviews"
+                android:layout_below="@+id/rating_data"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                android:layout_marginRight="@dimen/activity_horizontal_margin"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="@android:color/white"
                 android:text="@string/reviews"/>
             <TextView
                 android:id="@+id/trailers"
+                android:layout_below="@+id/reviews"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                android:layout_marginRight="@dimen/activity_horizontal_margin"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="@android:color/white"
                 android:text="@string/trailers"/>
-
-            <TextView
-                android:id="@+id/related"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/related"/>
 
         </RelativeLayout>
     </ScrollView>
