--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -86,33 +86,40 @@
             <ImageButton android:id="@+id/favorite"
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
+                android:layout_marginTop="@dimen/movie_detail_vertical_margin"
                 android:layout_toRightOf="@id/movie_title"
                 android:background="#00ffffff"
-                android:layout_marginTop="@dimen/movie_detail_vertical_margin"
                 android:src="@drawable/btn_star_holo_dark" />
             <TextView
                 android:id="@+id/reviews"
-                android:layout_below="@+id/rating_data"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_below="@+id/rating_data"
                 android:layout_centerHorizontal="true"
                 android:layout_marginLeft="@dimen/activity_horizontal_margin"
                 android:layout_marginRight="@dimen/activity_horizontal_margin"
+                android:text="@string/reviews"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:textColor="@android:color/white"
-                android:text="@string/reviews"/>
+                android:textColor="@android:color/white" />
+
             <TextView
                 android:id="@+id/trailers"
-                android:layout_below="@+id/reviews"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_below="@+id/reviews"
                 android:layout_centerHorizontal="true"
                 android:layout_marginLeft="@dimen/activity_horizontal_margin"
                 android:layout_marginRight="@dimen/activity_horizontal_margin"
+                android:text="@string/trailers"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:textColor="@android:color/white"
-                android:text="@string/trailers"/>
+                android:textColor="@android:color/white" />
 
+            <GridView
+                android:id="@+id/trailer_grid"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:numColumns="auto_fit"
+                android:stretchMode="columnWidth"></GridView>
         </RelativeLayout>
     </ScrollView>
 </RelativeLayout>
