--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,6 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="movie_detail_vertical_margin">24dp</dimen>
+    <dimen name="trailer_height">120dip</dimen>
+    <dimen name="trailer_width">160dip</dimen>
 </resources>
