--- a/app/src/main/res/layout/fragment_movies.xml
+++ b/app/src/main/res/layout/fragment_movies.xml
@@ -1,8 +1,10 @@
-<GridView
+<GridView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/movieGridView"
+    style="@style/MovieGridStyle"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:numColumns="auto_fit"
-    android:stretchMode="columnWidth"
+    android:background="@android:color/black"
     android:columnWidth="130dp"
-    android:id="@+id/movieGridView"
-    xmlns:android="http://schemas.android.com/apk/res/android" />
+    android:divider="@null"
+    android:numColumns="auto_fit"
+    android:stretchMode="columnWidth" />
